fix overflow:hidden not working in mobile browsers

--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
   font-family: Arial, Helvetica, sans-serif;
   background-repeat: no-repeat;
   background-image: linear-gradient(rgba(255, 192, 203, 0.4), rgba(255, 192, 203, 0.4)), url(background.jpg);
-  overflow: hidden;
+  /* overflow: hidden; */
 
 }
 
@@ -37,6 +37,11 @@ ul li {
   color: green;
 }
 
+li a {
+  color: green;
+  text-decoration: none;
+}
+
 #ham {
   display: none;
 }
@@ -48,10 +53,14 @@ ul li {
   margin: 3px;
 }
 
+header {
+  /* overflow: hidden; */
+}
+
 @media screen and (max-width: 950px) {
   
   nav ul {
-    position: absolute;
+    /* position: absolute;
     right: 0px;
     height: 70vh;
     top: 8vh;
@@ -61,7 +70,8 @@ ul li {
     width: 40%;
     align-items: center;
     background-color: rgba(255, 192, 203, 0.534);
-    transform: translateX(100%);
+    transform: translateX(100%); */
+    display: none;
   }
 
   #ham {
@@ -71,6 +81,20 @@ ul li {
 
 }
 
-.active {
+/* .active {
   transform: translateX(0%);
+} */
+
+.activeul {
+  position: absolute;
+    right: 0px;
+    height: 70vh;
+    top: 8vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    width: 40%;
+    align-items: center;
+    background-color: rgba(255, 192, 203, 0.534);
+    /* transform: translateX(100%); */
 }
